language_tests/outputs/invalid/borrow_move.out
error: cannot move out of borrowed content
 -> language_tests/source_files/invalid/borrow_move.tr:10:24
	    let _ = consumeList(values)
	                        ^^^^^^
